--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
 
                 <div class ="product-info">
                     <h1>{{ product }}</h1>
-                    <p>In Stock</p>
-                    <p>Out of Stock</p>
+                    <p v-show="inStock">In Stock</p>
+                    <p v-else-if="inventory <= 10 && inventory > 0">Almost sold out!</p>
+                    <p v-else>Out of Stock</p>
                 </div>
                 
             </div>
