--- a/index.html
+++ b/index.html
@@ -17,11 +17,16 @@
 
                 <div class ="product-info">
                     <h1>{{ product }}</h1>
-                    <p v-show="inStock">In Stock</p>
-                    <p v-else-if="inventory <= 10 && inventory > 0">Almost sold out!</p>
+                    <p v-if="inStock">In Stock</p>
                     <p v-else>Out of Stock</p>
+
+                    <ul>
+                        <li v-for="detail in details">{{ detail }}</li>
+                    </ul>
+                    <div v-for="variant in variants" :key="variant.variantId">
+                        <p>{{ variant.variantColor }}</p>
+                    </div>
                 </div>
-                
             </div>
         </div>
         <script src="https://cdn.jsdelivr.net/npm/vue"></script>
